# ferion

./: Cargo.toml  License.md  Readme.md  testsmall.json
examples/: json_loop.rs  testsmall.json  testtiny.json
src/: array.rs  field.rs  lib.rs  main.rs  object.rs  table.rs  test.rs  types.rs
src/serde/: deserializer.rs  mod.rs  serializer.rs
src/serde/de/: deserializer.rs  mod.rs  tests.rs
src/serde/ser/: mod.rs  serializer.rs  tests.rs
