[package]
name = "ferion"
version = "0.1.0"
edition = "2021"

[dependencies]
# bytemuck = "1.18.0"
chrono = { version = "0.4.38", default-features = true }
num-bigint = "0.4.6"
serde = { version = "1.0.210", optional = true }
# const-slice = "0.1.0"
# smallvec = "1.13.2"

[dev-dependencies]
flate2 = "1.0.34"
pot = "3.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"



[features]
default = ["serde"]
serde = ["dep:serde"]
specialization = []

[[example]]
name = "json_loop"
